remove dead code and fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background-image: url('./assets/branding/background.jpg');
   background-size: cover;
-  /* background-blend-mode: color-dodge;
-  background-color: rgb(255, 255, 255); */
 }
 
 code {
